syntax = "proto3";

package kvmrun.api.services.network.v2;

import "google/protobuf/empty.proto";
import "types/v2/types.proto";

option go_package = "github.com/0xef53/kvmrun/api/services/network/v2;network";

service NetworkService {
    rpc ListEndpoints(ListEndpointsRequest) returns (ListEndpointsResponse) { }

    rpc Configure(ConfigureRequest) returns (google.protobuf.Empty) { }
    rpc Deconfigure(DeconfigureRequest) returns (google.protobuf.Empty) { }
}

message ListEndpointsRequest {
    message Filter {
        // ...
    }
    Filter filter = 1;
}

message ListEndpointsResponse {
    repeated types.v2.NetworkEndPoint end_points = 1;
}

message ConfigureRequest {
    message VlanAttrs {
        uint32 vlan_id = 1;
        uint32 mtu = 2;
        string parent_interface = 3;
    }
    message VxlanAttrs {
        uint32 vni = 1;
        uint32 mtu = 2;
        string bind_interface = 3;
    }
    message RouterAttrs {
        repeated string addrs = 1;
        uint32 mtu = 2;
        string bind_interface = 3;
        string default_gateway = 4;
        uint32 in_limit = 5;
        uint32 out_limit = 6;
        uint32 process_id = 100;
    }
    message BridgeAttrs {
        string ifname = 1;
        uint32 mtu = 2;
    }
    string link_name = 1;
    oneof attrs {
        VlanAttrs vlan = 2;
        VxlanAttrs vxlan = 3;
        RouterAttrs router = 4;
        BridgeAttrs bridge = 5;
    }
    bool second_stage = 100;
}

message DeconfigureRequest {
    message VlanAttrs {
        uint32 vlan_id = 1;
    }
    message VxlanAttrs {
        uint32 vni = 1;
    }
    message RouterAttrs {
        string bind_interface = 1;
    }
    message BridgeAttrs {
        string ifname = 1;
    }
    string link_name = 1;
    oneof attrs {
        VlanAttrs vlan = 2;
        VxlanAttrs vxlan = 3;
        RouterAttrs router = 4;
        BridgeAttrs bridge = 5;
    }
}
